--- a/m.ipynb
+++ b/m.ipynb
@@ -4,66 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!DOCTYPE html>\n",
-    "<html lang=\"fa\" dir=\"rtl\">\n",
-    "<head>\n",
-    "    <meta charset=\"UTF-8\">\n",
-    "    <title> Welcome to AhmadRAG  </title>\n",
-    "    <style>\n",
-    "        body {\n",
-    "            direction: rtl;\n",
-    "            line-height: 300%;\n",
-    "            font-family: 'B Nazanin', sans-serif;\n",
-    "            font-size: 20px;\n",
-    "            padding: 20px;\n",
-    "            background-color: #ffffff;\n",
-    "            color: #333333;\n",
-    "        }\n",
-    "        pre {\n",
-    "            background-color: #AACFCB; /* رنگ پس‌زمینه بلوک‌های کد */\n",
-    "            padding: 10px;\n",
-    "            border-radius: 5px;\n",
-    "            direction: ltr; /* جهت متنی کدها از چپ به راست */\n",
-    "            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;\n",
-    "            font-size: 40px;\n",
-    "            overflow-x: auto;\n",
-    "            margin-bottom: 20px;\n",
-    "        }\n",
-    "        code {\n",
-    "            background-color: #f4f4f4;\n",
-    "            padding: 2px 4px;\n",
-    "            border-radius: 4px;\n",
-    "            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;\n",
-    "        }\n",
-    "        strong {\n",
-    "            font-weight: bold;\n",
-    "        }\n",
-    "        ul, ol {\n",
-    "            padding-right: 40px;\n",
-    "            margin-bottom: 10px;\n",
-    "        }\n",
-    "        ul ul, ul ol, ol ul, ol ol {\n",
-    "            padding-right: 20px;\n",
-    "        }\n",
-    "        a {\n",
-    "            color: #2980b9;\n",
-    "            text-decoration: none;\n",
-    "        }\n",
-    "        a:hover {\n",
-    "            text-decoration: underline;\n",
-    "        }\n",
-    "    </style>\n",
-    "</head>\n",
-    "<body>\n",
-    "    <div>\n",
-    "        <b>Welcome to AhmadRAG </b>\n",
-    "        <pre>\n",
-    "AhmadRAG\n",
-    "        </pre>\n",
-    "        <p> یک پلتفرم قدرتمند برای مدیریت و پردازش متون بزرگ است که با استفاده از ابزارها و کامپوننت‌های مختلف، امکان پردازش بهتر و مدیریت آسان‌تر اطلاعات متنی را فراهم می‌کند.!</p>\n",
-    "    </div>\n",
-    "</body>\n",
-    "</html>\n"
+    "**Welcome to AhmadRAG**"
    ]
   },
   {
