--- a/m.ipynb
+++ b/m.ipynb
@@ -39,7 +39,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۰: تنظیم و بارگذاری مدل‌های Ollama</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -87,17 +86,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>بخش ۰: تنظیم و بارگذاری مدل‌های Ollama (LLM و Embeddings)</b>\n",
-    "        <pre>\n",
-    "llm_model = \"llama3.1\"\n",
-    "llm_url = \"http://127.0.0.1:11434\"\n",
-    "#Loading The LLM (Language Model)\n",
-    "llm = OllamaLLM(model=llm_model, base_url=llm_url)\n",
-    "#Setting Ollama Embeddings\n",
-    " http://localhost:11434/api/tags\n",
-    "embed_model = OllamaEmbeddings(model=llm_model, base_url=llm_url)\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> تنظیم و بارگذاری مدل‌های Ollama (LLM و Embeddings)</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> تنظیم و بارگذاری مدل زبانی بزرگ (LLM) و امبدینگ‌های Ollama برای استفاده در پردازش‌های بعدی.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
