--- a/m.ipynb
+++ b/m.ipynb
@@ -130,23 +130,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Loading PDF Document and split\n",
-    "\n",
-    "# def load_pdf(file_path):\n",
-    "#     reader = PdfReader(file_path)\n",
-    "#     text = \"\"\n",
-    "#     for page in reader.pages:\n",
-    "#         text += page.extract_text()\n",
-    "#     return text\n",
-    "\n",
-    "# def split_text(text: str):\n",
-    "#     split_text = re.split('\\n \\n', text)\n",
-    "#     return [i for i in split_text if i != \"\"]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -178,6 +165,26 @@
    ],
    "source": [
     "file_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Loading PDF Document and split\n",
+    "\n",
+    "# def load_pdf(file_path):\n",
+    "#     reader = PdfReader(file_path)\n",
+    "#     text = \"\"\n",
+    "#     for page in reader.pages:\n",
+    "#         text += page.extract_text()\n",
+    "#     return text\n",
+    "\n",
+    "# def split_text(text: str):\n",
+    "#     split_text = re.split('\\n \\n', text)\n",
+    "#     return [i for i in split_text if i != \"\"]\n"
    ]
   },
   {
@@ -224,7 +231,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۱: تقسیم‌بندی متن</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -263,12 +269,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۱. تقسیم‌بندی متن یا فایل PDF به بخش‌های کوچک</b>\n",
-    "        <pre>\n",
-    "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1500, chunk_overlap=150)\n",
-    "chunks = text_splitter.split_text(file_content)\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> تقسیم‌بندی متن یا فایل PDF به بخش‌های کوچک</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> تقسیم متن بزرگ به بخش‌های کوچک‌تر برای پردازش بهتر.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
@@ -311,7 +312,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۲: ایجاد Vector Store</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -356,10 +356,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۲. ایجاد Vector Store با استفاده از Chroma</b>\n",
-    "        <pre>\n",
-    "vector_store = Chroma.from_texts(chunks, embed_model)\n",
-    "        </pre>\n",
+    "        <b> ایجاد Vector Store با استفاده از Chroma</b>\n",
     "        <p><b>توضیح:</b></p>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> ذخیره‌سازی برداری از بخش‌های متنی برای جستجو و بازیابی سریع‌تر.</li>\n",
@@ -403,7 +400,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۳: ایجاد Retriever</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -448,11 +444,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۳. ایجاد Retriever</b>\n",
-    "        <pre>\n",
-    "retriever = vector_store.as_retriever()\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> ایجاد Retriever</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> فراهم کردن امکان بازیابی بخش‌های مرتبط از بردارهای ذخیره شده.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
@@ -493,7 +485,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۴: ایجاد Retrieval Chain</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -538,11 +529,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۴. ایجاد Retrieval Chain با استفاده از LLM و Retriever</b>\n",
-    "        <pre>\n",
-    "chain = create_retrieval_chain(combine_docs_chain=llm, retriever=retriever)\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> ایجاد Retrieval Chain با استفاده از LLM و Retriever</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> ایجاد زنجیره پردازشی که از مدل زبانی بزرگ و بازیاب استفاده کند.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
@@ -584,7 +571,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۵: Retrieval-QA Chat Prompt</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -629,11 +615,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۵. Retrieval-QA Chat Prompt</b>\n",
-    "        <pre>\n",
-    "retrieval_qa_chat_prompt = hub.pull(\"langchain-ai/retrieval-qa-chat\")\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> Retrieval-QA Chat Prompt</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> بارگذاری پرامپت چت سوال و جواب از مخزن LangChain.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
@@ -683,7 +665,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۶: Combining Documents</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -728,11 +709,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۶. Combining Documents</b>\n",
-    "        <pre>\n",
-    "combine_docs_chain = create_stuff_documents_chain(llm, retrieval_qa_chat_prompt)\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> Combining Documents</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> ترکیب اسناد بازیابی شده برای ایجاد پاسخ‌های دقیق‌تر.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
@@ -774,7 +751,6 @@
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>بخش ۷: Final Retrieval Chain</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -819,11 +795,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b>۷. Final Retrieval Chain</b>\n",
-    "        <pre>\n",
-    "retrieval_chain = create_retrieval_chain(retriever, combine_docs_chain)\n",
-    "        </pre>\n",
-    "        <p><b>توضیح:</b></p>\n",
+    "        <b> Final Retrieval Chain</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> ایجاد زنجیره نهایی بازیابی برای پاسخ‌های دقیق‌تر.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
