--- a/m.ipynb
+++ b/m.ipynb
@@ -137,13 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Loading Text\n",
     "\n",
-    "with open('txt.md', 'r', encoding='utf-8') as file:\n",
+    "with open('text.txt', 'r', encoding='utf-8') as file:\n",
     "    file_content = file.read()"
    ]
   },
@@ -269,7 +269,7 @@
     "</head>\n",
     "<body>\n",
     "    <div>\n",
-    "        <b> تقسیم‌بندی متن یا فایل PDF به بخش‌های کوچک</b>\n",
+    "        <b> تقسیم‌بندی متن به بخش‌های کوچک</b>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> تقسیم متن بزرگ به بخش‌های کوچک‌تر برای پردازش بهتر.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
@@ -357,7 +357,6 @@
     "<body>\n",
     "    <div>\n",
     "        <b> ایجاد Vector Store با استفاده از Chroma</b>\n",
-    "        <p><b>توضیح:</b></p>\n",
     "        <ul>\n",
     "            <li><b>هدف:</b> ذخیره‌سازی برداری از بخش‌های متنی برای جستجو و بازیابی سریع‌تر.</li>\n",
     "            <li><b>کامپوننت‌ها:</b>\n",
