--- a/m.ipynb
+++ b/m.ipynb
@@ -4,7 +4,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Welcome to AhmadRAG**"
+    "**What is Retrieval-Augmented Generation**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html lang=\"fa\" dir=\"rtl\">\n",
+    "<head>\n",
+    "    <div style=\"direction:rtl; line-height:300%;\">\n",
+    "        <font face=\"B Nazanin\" size=\"5\">\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <title>توضیح درباره RAG</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            direction: rtl;\n",
+    "            line-height: 300%;\n",
+    "            font-family: 'B Nazanin', sans-serif;\n",
+    "            font-size: 20px;\n",
+    "            padding: 20px;\n",
+    "            background-color: #ffffff;\n",
+    "            color: #333333;\n",
+    "        }\n",
+    "        pre {\n",
+    "            background-color: #FFC0CB; /* رنگ پس‌زمینه بلوک‌های کد */\n",
+    "            padding: 10px;\n",
+    "            border-radius: 5px;\n",
+    "            direction: ltr; /* جهت متنی کدها از چپ به راست */\n",
+    "            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;\n",
+    "            font-size: 14px;\n",
+    "            overflow-x: auto;\n",
+    "            margin-bottom: 20px;\n",
+    "        }\n",
+    "        code {\n",
+    "            background-color: #f4f4f4;\n",
+    "            padding: 2px 4px;\n",
+    "            border-radius: 4px;\n",
+    "            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;\n",
+    "        }\n",
+    "        strong {\n",
+    "            font-weight: bold;\n",
+    "        }\n",
+    "        ul, ol {\n",
+    "            padding-right: 40px;\n",
+    "            margin-bottom: 10px;\n",
+    "        }\n",
+    "        ul ul, ul ol, ol ul, ol ol {\n",
+    "            padding-right: 20px;\n",
+    "        }\n",
+    "        a {\n",
+    "            color: #2980b9;\n",
+    "            text-decoration: none;\n",
+    "        }\n",
+    "        a:hover {\n",
+    "            text-decoration: underline;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <h1>توضیح درباره RAG</h1>\n",
+    "    <p>RAG یا <strong>\"Retrieval-Augmented Generation\"</strong> یک رویکرد نوین در پردازش زبان طبیعی (NLP) است که ترکیبی از دو تکنیک اصلی یعنی <strong>\"بازیابی\"</strong> (Retrieval) و <strong>\"تولید\"</strong> (Generation) را به کار می‌گیرد. این روش به ویژه در زمینه‌های مانند پاسخ‌گویی به سوالات، چت‌بات‌ها و تولید متن‌های اطلاعاتی کاربرد دارد.</p> \n",
+    "    <h2>۱. اجزای RAG</h2>\n",
+    "    <ul>\n",
+    "        <li>\n",
+    "            <strong>بازیابی (Retrieval):</strong>\n",
+    "            <p>در این مرحله، سیستم به دنبال جستجو و بازیابی اطلاعات مرتبط از یک پایگاه داده یا مجموعه‌ای از متون می‌گردد. این اطلاعات می‌تواند شامل مقالات، وب‌سایت‌ها، یا هر نوع داده متنی دیگری باشد. هدف این است که اطلاعاتی که به سوال یا موضوع مطرح شده مرتبط است، شناسایی و استخراج شود.</p>\n",
+    "        </li>\n",
+    "        <li>\n",
+    "            <strong>تولید (Generation):</strong>\n",
+    "            <p>پس از بازیابی اطلاعات، سیستم از این داده‌ها برای تولید پاسخ یا متنی جدید استفاده می‌کند. این مرحله معمولاً با استفاده از مدل‌های تولید متن مانند GPT یا BERT انجام می‌شود. در اینجا، سیستم می‌تواند اطلاعات بازیابی شده را ترکیب کرده و پاسخی مناسب و منطقی تولید کند.</p>\n",
+    "        </li>\n",
+    "    </ul>\n",
+    "    <h2>۲. مزایای RAG</h2>\n",
+    "    <ul>\n",
+    "        <li><strong>دقت بیشتر:</strong> با بازیابی اطلاعات مرتبط، دقت پاسخ‌ها افزایش می‌یابد.</li>\n",
+    "        <li><strong>تنوع پاسخ‌ها:</strong> به دلیل استفاده از اطلاعات مختلف، پاسخ‌ها می‌توانند متنوع‌تر و جامع‌تر باشند.</li>\n",
+    "        <li><strong>کاهش بار محاسباتی:</strong> به جای اینکه تمام اطلاعات در مدل ذخیره شود، می‌توان از منابع خارجی برای بازیابی استفاده کرد.</li>\n",
+    "    </ul>\n",
+    "    <h2>۳. کاربردها</h2>\n",
+    "    <ul>\n",
+    "        <li><strong>پاسخ به سوالات:</strong> به ویژه در سیستم‌های پرسش و پاسخ که نیاز به اطلاعات دقیق و به‌روز دارند.</li>\n",
+    "        <li><strong>چت‌بات‌ها:</strong> برای بهبود کیفیت گفتگوها و ارائه پاسخ‌های دقیق‌تر.</li>\n",
+    "        <li><strong>تولید محتوا:</strong> برای نوشتن مقالات یا متون علمی با استناد به منابع معتبر.</li>\n",
+    "    </ul>\n",
+    "    <h2>۴. چالش‌ها</h2>\n",
+    "    <ul>\n",
+    "        <li><strong>کیفیت داده‌های بازیابی شده:</strong> اگر داده‌های بازیابی شده بی‌کیفیت یا نامرتبط باشند، پاسخ نهایی نیز تحت تأثیر قرار می‌گیرد.</li>\n",
+    "        <li><strong>زمان پاسخ‌دهی:</strong> ممکن است زمان بیشتری برای بازیابی اطلاعات نیاز باشد که می‌تواند تجربه کاربری را تحت تأثیر قرار دهد.</li>\n",
+    "    </ul>\n",
+    "    <p>به طور کلی، RAG یک رویکرد قدرتمند در پردازش زبان طبیعی است که می‌تواند به بهبود کیفیت و دقت پاسخ‌ها کمک کند.</p>\n",
+    "</body>\n",
+    "</html>\n"
    ]
   },
   {
