--- a/m.ipynb
+++ b/m.ipynb
@@ -4,21 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**What is Retrieval-Augmented Generation**\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<!DOCTYPE html>\n",
     "<html lang=\"fa\" dir=\"rtl\">\n",
     "<head>\n",
     "    <div style=\"direction:rtl; line-height:300%;\">\n",
     "        <font face=\"B Nazanin\" size=\"5\">\n",
     "    <meta charset=\"UTF-8\">\n",
-    "    <title>توضیح درباره RAG</title>\n",
     "    <style>\n",
     "        body {\n",
     "            direction: rtl;\n",
@@ -65,7 +56,7 @@
     "    </style>\n",
     "</head>\n",
     "<body>\n",
-    "    <h1>توضیح درباره RAG</h1>\n",
+    "    <h1>Retrieval-Augmented Generation</h1>\n",
     "    <p>RAG یا <strong>\"Retrieval-Augmented Generation\"</strong> یک رویکرد نوین در پردازش زبان طبیعی (NLP) است که ترکیبی از دو تکنیک اصلی یعنی <strong>\"بازیابی\"</strong> (Retrieval) و <strong>\"تولید\"</strong> (Generation) را به کار می‌گیرد. این روش به ویژه در زمینه‌های مانند پاسخ‌گویی به سوالات، چت‌بات‌ها و تولید متن‌های اطلاعاتی کاربرد دارد.</p> \n",
     "    <h2>۱. اجزای RAG</h2>\n",
     "    <ul>\n",
@@ -98,6 +89,88 @@
     "    <p>به طور کلی، RAG یک رویکرد قدرتمند در پردازش زبان طبیعی است که می‌تواند به بهبود کیفیت و دقت پاسخ‌ها کمک کند.</p>\n",
     "</body>\n",
     "</html>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "________"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!DOCTYPE html>\n",
+    "<html lang=\"fa\" dir=\"rtl\">\n",
+    "<head>\n",
+    "    <div style=\"direction:rtl; line-height:300%;\">\n",
+    "        <font face=\"B Nazanin\" size=\"5\">\n",
+    "    <meta charset=\"UTF-8\">\n",
+    "    <title>نصب Llama 3.1</title>\n",
+    "    <style>\n",
+    "        body {\n",
+    "            direction: rtl;\n",
+    "            line-height: 300%;\n",
+    "            font-family: 'B Nazanin', sans-serif;\n",
+    "            font-size: 20px;\n",
+    "            padding: 20px;\n",
+    "            background-color: #ffffff;\n",
+    "            color: #333333;\n",
+    "        }\n",
+    "        pre {\n",
+    "            background-color: #FFC0CB; /* رنگ پس‌زمینه بلوک‌های کد */\n",
+    "            padding: 10px;\n",
+    "            border-radius: 5px;\n",
+    "            direction: ltr; /* جهت متنی کدها از چپ به راست */\n",
+    "            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;\n",
+    "            font-size: 14px;\n",
+    "            overflow-x: auto;\n",
+    "            margin-bottom: 20px;\n",
+    "        }\n",
+    "        code {\n",
+    "            background-color: #f4f4f4;\n",
+    "            padding: 2px 4px;\n",
+    "            border-radius: 4px;\n",
+    "            font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;\n",
+    "        }\n",
+    "        strong {\n",
+    "            font-weight: bold;\n",
+    "        }\n",
+    "        ul, ol {\n",
+    "            padding-right: 40px;\n",
+    "            margin-bottom: 10px;\n",
+    "        }\n",
+    "        ul ul, ul ol, ol ul, ol ol {\n",
+    "            padding-right: 20px;\n",
+    "        }\n",
+    "        a {\n",
+    "            color: #2980b9;\n",
+    "            text-decoration: none;\n",
+    "        }\n",
+    "        a:hover {\n",
+    "            text-decoration: underline;\n",
+    "        }\n",
+    "        img {\n",
+    "            max-width: 100%;\n",
+    "            height: auto;\n",
+    "            margin-bottom: 20px;\n",
+    "        }\n",
+    "    </style>\n",
+    "</head>\n",
+    "<body>\n",
+    "    <h1>نصب Llama 3.1</h1>\n",
+    "    <p>برای نصب Llama 3.1، مراحل زیر را دنبال کنید:</p>\n",
+    "    <p>ابتدا باید برنامه Llama 3.1 را دانلود و نصب کنید. می‌توانید از <a href=\"https://ollama.com/\" target=\"_blank\">لینک رسمی </a> دانلود استفاده کنید. پس از دانلود، مراحل نصب را طبق دستورالعمل‌های ارائه شده دنبال کنید.</p>\n",
+    "    <img src=\"img/1.png\" alt=\"نصب برنامه Llama 3.1\" />\n",
+    "    <p>پس از نصب برنامه، باید <a href=\"https://ollama.com/library/llama3.1\" target=\"_blank\"> مدل مورد نظر </a> نظر خود را انتخاب کنید. Llama 3.1 چندین مدل مختلف ارائه می‌دهد که می‌توانید بر اساس نیاز خود یکی از آن‌ها را انتخاب کنید. برای این کار، به منوی مدل‌ها در برنامه بروید و مدل مناسب را انتخاب کنید.</p>\n",
+    "    <img src=\"img/2.png\" alt=\"انتخاب مدل Llama 3.1\" />\n",
+    "    <p>پس از انتخاب مدل، کد مورد نظر را کپی و در ترمینال آن را اجرا کنید.</p>\n",
+    "    <img src=\"img/3.png\" alt=\"تنظیمات نهایی Llama 3.1\" />\n",
+    "    <p>پس از انجام این مراحل، Llama 3.1 آماده استفاده است. شما می‌توانید از آن برای پروژه‌های خود بهره‌برداری کنید.</p>\n",
+    "</body>\n",
+    "</html>"
    ]
   },
   {
