--- a/m.ipynb
+++ b/m.ipynb
@@ -163,11 +163,11 @@
     "    <h1>نصب Llama 3.1</h1>\n",
     "    <p>برای نصب Llama 3.1، مراحل زیر را دنبال کنید:</p>\n",
     "    <p>ابتدا باید برنامه Llama 3.1 را دانلود و نصب کنید. می‌توانید از <a href=\"https://ollama.com/\" target=\"_blank\">لینک رسمی </a> دانلود استفاده کنید. پس از دانلود، مراحل نصب را طبق دستورالعمل‌های ارائه شده دنبال کنید.</p>\n",
-    "    <img src=\"img/1.png\" alt=\"نصب برنامه Llama 3.1\" />\n",
+    "    <img src=\"images/1.png\" alt=\"نصب برنامه Llama 3.1\" />\n",
     "    <p>پس از نصب برنامه، باید <a href=\"https://ollama.com/library/llama3.1\" target=\"_blank\"> مدل مورد نظر </a> نظر خود را انتخاب کنید. Llama 3.1 چندین مدل مختلف ارائه می‌دهد که می‌توانید بر اساس نیاز خود یکی از آن‌ها را انتخاب کنید. برای این کار، به منوی مدل‌ها در برنامه بروید و مدل مناسب را انتخاب کنید.</p>\n",
-    "    <img src=\"img/2.png\" alt=\"انتخاب مدل Llama 3.1\" />\n",
+    "    <img src=\"images/2.png\" alt=\"انتخاب مدل Llama 3.1\" />\n",
     "    <p>پس از انتخاب مدل، کد مورد نظر را کپی و در ترمینال آن را اجرا کنید.</p>\n",
-    "    <img src=\"img/3.png\" alt=\"تنظیمات نهایی Llama 3.1\" />\n",
+    "    <img src=\"images/3.png\" alt=\"تنظیمات نهایی Llama 3.1\" />\n",
     "    <p>پس از انجام این مراحل، Llama 3.1 آماده استفاده است. شما می‌توانید از آن برای پروژه‌های خود بهره‌برداری کنید.</p>\n",
     "</body>\n",
     "</html>"
